Bug 206814 - Ark hangs immediately after the close view html
Summary: Ark hangs immediately after the close view html
Status: RESOLVED FIXED
Alias: None
Product: ark
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Unlisted Binaries Linux
: NOR crash
Target Milestone: ---
Assignee: Harald Hvaal
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2009-09-09 02:17 UTC by fizista
Modified: 2009-09-09 05:59 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Test file (630 bytes, application/octet-stream)
2009-09-09 02:48 UTC, Raphael Kubo da Costa
Details

Note You need to log in before you can comment on or make changes to this bug.
Description fizista 2009-09-09 02:17:26 UTC
Application that crashed: ark
Version of the application: 2.13
KDE Version: 4.3.1 (KDE 4.3.1)
Qt Version: 4.5.2
Operating System: Linux 2.6.27.24-server-2mnb i686
Distribution: "Mandriva Linux 2009.0"

What I was doing when the application crashed:
1) Download file http://dataexpand.pl/d/arktest.zip
2) Open the file in ark
3) Double click on report.html
4) Click on the "CLOSE IT"
5) Crash ! 

 -- Backtrace:
Application: Ark (ark), signal: Segmentation fault
[KCrash Handler]
#6  0x00000000 in ?? ()
#7  0xb576be89 in ArkViewer::slotFinished (this=0xbf98da64) at /usr/src/debug/kdeutils-4.3.1/ark/part/arkviewer.cpp:88
#8  0xb576d494 in ArkViewer::qt_metacall (this=0xbf98da64, _c=QMetaObject::InvokeMetaMethod, _id=0, _a=0xbf98b268) at /usr/src/debug/kdeutils-4.3.1/build/ark/part/arkviewer.moc:70
#9  0xb6b0f915 in QMetaObject::activate () from /usr/lib/libQtCore.so.4
#10 0xb6b10615 in QMetaObject::activate () from /usr/lib/libQtCore.so.4
#11 0xb7968945 in KDialog::finished (this=0xbf98da64) at /usr/src/debug/kdelibs-4.3.1/build/kdeui/kdialog.moc:295
#12 0xb79689c4 in KDialog::hideEvent (this=0xbf98da64, event=0x9a3f568) at /usr/src/debug/kdelibs-4.3.1/kdeui/dialogs/kdialog.cpp:961
#13 0xb6d5ca99 in QWidget::event () from /usr/lib/libQtGui.so.4
#14 0xb6d03b4c in QApplicationPrivate::notify_helper () from /usr/lib/libQtGui.so.4
#15 0xb6d0c39b in QApplication::notify () from /usr/lib/libQtGui.so.4
#16 0xb7a092e1 in KApplication::notify (this=0xbf98e22c, receiver=0xbf98da64, event=0xbf98b6c0) at /usr/src/debug/kdelibs-4.3.1/kdeui/kernel/kapplication.cpp:302
#17 0xb6af9aee in QCoreApplication::notifyInternal () from /usr/lib/libQtCore.so.4
#18 0xb6d5b1d6 in QWidgetPrivate::hide_helper () from /usr/lib/libQtGui.so.4
#19 0xb6d63020 in QWidget::setVisible () from /usr/lib/libQtGui.so.4
#20 0xb722014b in QDialog::setVisible () from /usr/lib/libQtGui.so.4
#21 0xb6d62321 in QWidgetPrivate::close_helper () from /usr/lib/libQtGui.so.4
#22 0xb6d62486 in QWidget::close () from /usr/lib/libQtGui.so.4
#23 0xb796b5a0 in KDialog::slotButtonClicked (this=0xbf98da64, button=64) at /usr/src/debug/kdelibs-4.3.1/kdeui/dialogs/kdialog.cpp:885
#24 0xb796d977 in KDialog::qt_metacall (this=0xbf98da64, _c=QMetaObject::InvokeMetaMethod, _id=33, _a=0xbf98b950) at /usr/src/debug/kdelibs-4.3.1/build/kdeui/kdialog.moc:184
#25 0xb576d432 in ArkViewer::qt_metacall (this=0xbf98da64, _c=QMetaObject::InvokeMetaMethod, _id=69, _a=0xbf98b950) at /usr/src/debug/kdeutils-4.3.1/build/ark/part/arkviewer.moc:65
#26 0xb6b0f915 in QMetaObject::activate () from /usr/lib/libQtCore.so.4
#27 0xb6b10615 in QMetaObject::activate () from /usr/lib/libQtCore.so.4
#28 0xb6b133f5 in QSignalMapper::mapped () from /usr/lib/libQtCore.so.4
#29 0xb6b13ceb in QSignalMapper::map () from /usr/lib/libQtCore.so.4
#30 0xb6b13ebe in QSignalMapper::map () from /usr/lib/libQtCore.so.4
#31 0xb6b14774 in QSignalMapper::qt_metacall () from /usr/lib/libQtCore.so.4
#32 0xb6b0f915 in QMetaObject::activate () from /usr/lib/libQtCore.so.4
#33 0xb6b0fd7b in QMetaObject::activate () from /usr/lib/libQtCore.so.4
#34 0xb73cd855 in QAbstractButton::clicked () from /usr/lib/libQtGui.so.4
#35 0xb70dcabd in ?? () from /usr/lib/libQtGui.so.4
#36 0xb70de81b in ?? () from /usr/lib/libQtGui.so.4
#37 0xb70deab6 in QAbstractButton::mouseReleaseEvent () from /usr/lib/libQtGui.so.4
#38 0xb6d5cf1d in QWidget::event () from /usr/lib/libQtGui.so.4
#39 0xb70dc940 in QAbstractButton::event () from /usr/lib/libQtGui.so.4
#40 0xb718c103 in QPushButton::event () from /usr/lib/libQtGui.so.4
#41 0xb6d03b4c in QApplicationPrivate::notify_helper () from /usr/lib/libQtGui.so.4
#42 0xb6d0cdf2 in QApplication::notify () from /usr/lib/libQtGui.so.4
#43 0xb7a092e1 in KApplication::notify (this=0xbf98e22c, receiver=0x9b30e78, event=0xbf98c058) at /usr/src/debug/kdelibs-4.3.1/kdeui/kernel/kapplication.cpp:302
#44 0xb6af9aee in QCoreApplication::notifyInternal () from /usr/lib/libQtCore.so.4
#45 0xb6d0bc21 in QApplicationPrivate::sendMouseEvent () from /usr/lib/libQtGui.so.4
#46 0xb6d7f90d in ?? () from /usr/lib/libQtGui.so.4
#47 0xb6d7ed8a in QApplication::x11ProcessEvent () from /usr/lib/libQtGui.so.4
#48 0xb6da93a4 in ?? () from /usr/lib/libQtGui.so.4
#49 0xb60367ea in g_main_context_dispatch () from /usr/lib/libglib-2.0.so.0
#50 0xb6039f08 in ?? () from /usr/lib/libglib-2.0.so.0
#51 0xb603a0c8 in g_main_context_iteration () from /usr/lib/libglib-2.0.so.0
#52 0xb6b266ca in QEventDispatcherGlib::processEvents () from /usr/lib/libQtCore.so.4
#53 0xb6da8afa in ?? () from /usr/lib/libQtGui.so.4
#54 0xb6af80b3 in QEventLoop::processEvents () from /usr/lib/libQtCore.so.4
#55 0xb6af850d in QEventLoop::exec () from /usr/lib/libQtCore.so.4
#56 0xb721f121 in QDialog::exec () from /usr/lib/libQtGui.so.4
#57 0xb576c812 in ArkViewer::viewInInternalViewer (this=0xbf98da64, filename=@0xbf98db30) at /usr/src/debug/kdeutils-4.3.1/ark/part/arkviewer.cpp:167
#58 0xb576ce52 in ArkViewer::view (filename=@0xbf98db30, parent=0x996e148) at /usr/src/debug/kdeutils-4.3.1/ark/part/arkviewer.cpp:100
#59 0xb5764edd in Part::slotPreviewExtracted (this=0x9935978, job=0x9909b48) at /usr/src/debug/kdeutils-4.3.1/ark/part/part.cpp:471
#60 0xb575dd29 in Part::qt_metacall (this=0x9935978, _c=QMetaObject::InvokeMetaMethod, _id=7, _a=0x9ac6140) at /usr/src/debug/kdeutils-4.3.1/build/ark/part/moc_part.cpp:121
#61 0xb6b08d6a in QMetaCallEvent::placeMetaCall () from /usr/lib/libQtCore.so.4
#62 0xb6b0a8e5 in QObject::event () from /usr/lib/libQtCore.so.4
#63 0xb6d03b4c in QApplicationPrivate::notify_helper () from /usr/lib/libQtGui.so.4
#64 0xb6d0c2a6 in QApplication::notify () from /usr/lib/libQtGui.so.4
#65 0xb7a092e1 in KApplication::notify (this=0xbf98e22c, receiver=0x9935978, event=0x9ba31a8) at /usr/src/debug/kdelibs-4.3.1/kdeui/kernel/kapplication.cpp:302
#66 0xb6af9aee in QCoreApplication::notifyInternal () from /usr/lib/libQtCore.so.4
#67 0xb6afa7a5 in QCoreApplicationPrivate::sendPostedEvents () from /usr/lib/libQtCore.so.4
#68 0xb6afa98c in QCoreApplication::sendPostedEvents () from /usr/lib/libQtCore.so.4
#69 0xb6b26aad in ?? () from /usr/lib/libQtCore.so.4
#70 0xb60367ea in g_main_context_dispatch () from /usr/lib/libglib-2.0.so.0
#71 0xb6039f08 in ?? () from /usr/lib/libglib-2.0.so.0
#72 0xb603a0c8 in g_main_context_iteration () from /usr/lib/libglib-2.0.so.0
#73 0xb6b266ca in QEventDispatcherGlib::processEvents () from /usr/lib/libQtCore.so.4
#74 0xb6da8afa in ?? () from /usr/lib/libQtGui.so.4
#75 0xb6af80b3 in QEventLoop::processEvents () from /usr/lib/libQtCore.so.4
#76 0xb6af850d in QEventLoop::exec () from /usr/lib/libQtCore.so.4
#77 0xb6afaa66 in QCoreApplication::exec () from /usr/lib/libQtCore.so.4
#78 0xb6d039b4 in QApplication::exec () from /usr/lib/libQtGui.so.4
#79 0x0804fa55 in main (argc=-1080498764, argv=0xbf98e4e0) at /usr/src/debug/kdeutils-4.3.1/ark/app/main.cpp:209

Reported using DrKonqi
Comment 1 Raphael Kubo da Costa 2009-09-09 02:48:58 UTC
Created attachment 36809 [details]
Test file

Attach the test file here for future-proofness.
Comment 2 Raphael Kubo da Costa 2009-09-09 05:55:45 UTC
SVN commit 1021393 by rkcosta:

Remove unnecessary slot.

m_part is always deleted correctly when the dialog is closed, and by
removing this slot we prevent a double delete when the part has already
been deleted (think a KHTMLPart that has executed window.close() here).

BUG: 206814

 M  +0 -10     arkviewer.cpp  
 M  +0 -1      arkviewer.h  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1021393
Comment 3 Raphael Kubo da Costa 2009-09-09 05:59:33 UTC
SVN commit 1021395 by rkcosta:

Backport r1021393.

Remove unnecessary slot.

m_part is always deleted correctly when the dialog is closed, and by
removing this slot we prevent a double delete when the part has already
been deleted (think a KHTMLPart that has executed window.close() here).

CCBUG: 206814


 M  +0 -9      arkviewer.cpp  
 M  +0 -1      arkviewer.h  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1021395