Remove unnecessary slot.

m_part is always deleted correctly when the dialog is closed, and by
removing this slot we prevent a double delete when the part has already
been deleted (think a KHTMLPart that has executed window.close() here).

BUG: 206814

svn path=/trunk/KDE/kdeutils/ark/; revision=1021393